[project]
name = "binloader"
version = "0.0.1"
description = "Run VIM and Busybox"
authors = [{ name="Ulises", email="ulises.odysseus22@gmail.com" }]
readme = "README.md"
requires-python = ">=3.6"
license = { text = "GPLv2" }

[project.urls]
Homepage = "https://github.com/ulisesojeda/binary_loader"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
